--- a/templates/users/login.html
+++ b/templates/users/login.html
@@ -13,10 +13,14 @@
 
 <form method = "POST" action = "{% url 'login' %}">
     {% csrf_token %}
+    <div class ="form-group">
+        <input class ="form-control" type="text" placeholder="Username" name="username"/>
+    </div>
+    <div class ="form-group">
+        <input class ="form-control" type="password" placeholder="Password" name="password"/>
+    </div>
 
-    <input type="text" placeholder="Username" name="username">
-    <input type="password" placeholder="Password" name="password">
-    <button type="submit">sing in</button>
+    <button class="btn btn-primary btn-block mt-5" type ="submit">sing in</button>
 </form>
 
 {% endblock %}
